# my-python-package

./: .gitignore  README.md  pyproject.toml
src/my_python_package/: greet.py
src/my_python_package_taniomi/: __init__.py  module.py
